<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/twitter" android:title="@string/label_twitter" android:showAsAction="always|withText|collapseActionView">
        <menu>
            <item android:id="@+id/item1" android:showAsAction="always|withText|collapseActionView" android:title="@string/label_bba"/>
            <item android:id="@+id/item2" android:showAsAction="always|withText|collapseActionView" android:title="@string/label_picasa"/>
        </menu>
    </item>
    <item android:id="@+id/facebook" android:title="@string/label_facebook" android:showAsAction="always|withText|collapseActionView"></item>
    <item android:id="@+id/flickr" android:title="@string/label_flickr" android:showAsAction="always|collapseActionView"></item>
    <item android:id="@+id/pinterest" android:title="@string/label_pinterest" android:showAsAction="always|withText|collapseActionView"></item>

</menu>